--- a/Pipfile
+++ b/Pipfile
@@ -4,19 +4,12 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "*"
-tweepy = "*"
-pylint = "*"
-black = "*"
-isort = "*"
+python-dotenv = "*"
 langchain = "*"
-langchain-community = "*"
 langchain-openai = "*"
+tweepy = "*"
 
 [dev-packages]
 
 [requires]
 python_version = "3.10"
-
-[pipenv]
-allow_prereleases = true
